Bug 646422 - push/replaceState should inform global history of the new URI's title. r=mak